@@ -2,6 +2,7 @@ gscan2pdf (0.9.31) lucid; urgency=low
 
   * New upstream release
   * Minor editting of description
+  * Patched the clean target to fix FTBFS
 
  --
 
